<resources>
    <string name="app_name">MobileDev</string>
    //Main Activity
    <string name="temp_button">Temperature</string>
    <string name="distance_button">Distance</string>

    //Temperature Activity
    <string name="celsius_text">Celsius:</string>
    <string name="convert_button">Convert</string>

    //Distance Activity
    <string name="inches_text">Inches</string>
    <string name="feet_text">Feet</string>
    <string name="miles_text">Miles</string>
    <string name="metres_text">Metres</string>
    <string name="unit_prompt">Choose a unit of measurement to convert</string>
</resources>
